syntax = "proto3";

package mail;

option go_package = "./user";

// 邮件验证码
service CheckCode {
  // 发送邮箱验证码
  rpc SendMailCheckCode(SendMailCheckCodeReq) returns (SendMailCheckCodeResp);
}
message SendMailCheckCodeReq {
  // 服务名称，例如：user，使用蛇形命名
  string ServiceName = 1;
  // 接口名称，例如：user_register，使用蛇形命名
  string InterfaceName = 2;
  string Email = 3;
  // 用户操作，例如：注册账号、忘记密码等，该字段将会被嵌入发送的邮件中
  string UserOperation = 4;
  // 用户ip地址，主要用于限频
  string ip = 5;
}
message SendMailCheckCodeResp {
  string CheckCode = 1;
}